chore: adicionando arquivos pré-prontos

--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmação de Presença</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+  </head>
 <body>
     <div class="container">
         <h1>Confirme sua Presença!</h1>
@@ -40,9 +45,8 @@
                 <p>MARCELO BATTISTELLA BUENO</p>
                 <img src="img/logo.png" alt="Image" height="30">
                 <hr>
-                <p>Desenvolvido por <a href="https://github.com/LukeCesar7">LukeCesar7</a></p>
-                <p>Variant 1.0.0</p>
-    </div>
+                <p>Diretório Acadêmico de Direito</p>
+                <p>Pres. Marcela Lira</p>
 
 
     <script src="script.js"></script>
