--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <h1>Confirme sua Presença!</h1>
 
-        <label for="ra">Seu R.A </label>
+        <label for="ra">Sua Matrícula </label>
         <input type="text" id="ra" name="ra" placeholder="Digite sua matrícula...">
 
         <label for="codigo">Seu Nome</label>
